force-app/main/default/objects/MutationSousVente__c/MutationSousVente__c.object-meta.xml
<CustomObject>
    <description>Objet représentant les Mutations sous vente de chaque sous vente.</description>
    <label>MutationSousVente</label>
    <nameField>
        <displayFormat>MutationSousVente-{0000}</displayFormat>
        <label>MutationSousVente Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MutationSousVentes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>