force-app/main/default/objects/MutationSousVente__c/fields/Quantite__c.field-meta.xml
<CustomField>
    <fullName>Quantite__c</fullName>
    <description>Champ Quantite des medicament pour la mutation</description>
    <label>Quantite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>