force-app/main/default/objects/MutationSousVente__c/fields/Type_de_Mutation__c.field-meta.xml
<CustomField>
    <fullName>Type_de_Mutation__c</fullName>
    <description>Champs pour le type de Mutation</description>
    <label>Type de Mutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>changement</fullName>
                <default>true</default>
                <label>changement</label>
            </value>
            <value>
                <fullName>Retour Medicament</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>