force-app/main/default/objects/MutationSousVente__c/listViews/MutationsRechange.listView-meta.xml
<ListView>
    <fullName>MutationsRechange</fullName>
    <columns>NAME</columns>
    <columns>TypeDeMutation__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TypeDeMutation__c</field>
        <operation>equals</operation>
        <value>changement</value>
    </filters>
    <label>Mutations Rechange</label>
</ListView>