force-app/main/default/objects/MutationSousVente__c/listViews/MutationsRetour.listView-meta.xml
<ListView>
    <fullName>MutationsRetour</fullName>
    <columns>NAME</columns>
    <columns>TypeDeMutation__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TypeDeMutation__c</field>
        <operation>equals</operation>
        <value>Retour</value>
    </filters>
    <label>Mutations Retour</label>
</ListView>