force-app/main/default/objects/MutationSousVente__c/listViews/MutationsSousVente.listView-meta.xml
<ListView>
    <fullName>MutationsSousVente</fullName>
    <columns>NAME</columns>
    <columns>TypeDeMutation__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mutations Sous Vente</label>
</ListView>